--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
         <h1> Isa's Website</h1>
         <h2>WEBSITE IN PROGRESS</h2>
-
+        <h3>Experimenting with CSS</h3>
           
     </body>
 </html>
